[project]
name = "data-run"
version = "0.1.0"
description = "Data efficiency benchmark for language model training"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.0.0",
    "kernels>=0.11.7",
    "numpy>=2.2.6",
    "tiktoken>=0.11.0",
    "torch==2.9.1",
    "tqdm>=4.66.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
